# jigolo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Outline.md  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/brainstorms/: 2026-02-27-context-manager-brainstorm.md  2026-02-28-rust-learning-curriculum-brainstorm.md  2026-02-28-settings-viewer-brainstorm.md  2026-02-28-snippet-library-brainstorm.md  2026-03-03-refactoring-review-brainstorm.md
docs/journal/: rust-concepts.md  step-01-hello-world.md  step-02-cli-arguments.md  step-03-read-directory.md  step-04-recursive-search.md  step-05-data-structures.md
docs/plans/: 2026-02-27-feat-readonly-browser-foundation-plan.md  2026-02-28-feat-rust-learn-skill-plan.md  2026-03-02-feat-effective-merged-settings-view-plan.md  2026-03-02-feat-snippet-compose-mode-plan.md  2026-03-02-fix-folder-navigation-clear-content-plan.md  2026-03-02-fix-remove-enter-keybinding-plan.md  2026-03-03-refactor-extract-text-input-plan.md
src/: discovery.rs  lib.rs  library.rs  main.rs  model.rs  settings.rs
src/tui/: app.rs  compose.rs  edit.rs  files.rs  library.rs  mod.rs  settings.rs  text_input.rs
tests/: cli.rs
