[package]
name = "context-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
tui-tree-widget = "0.23"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"
